# nrp-core

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_opensim  Jenkinsfile  OpensimInstall.sh  README.md  _version.txt  build.sh  docker-compose-env.yaml  docker-compose-nrp.yaml  docker-compose.yaml  nrp_core_installer.sh  only_build.sh  readme.txt  run_opensim_test.sh
.ci/: 11-prepare-build.sh  23-build-npm.sh  25-build-npm.sh  Jenkinsfile  js-version.bash
.ci/cmake_cache/: gazebo.cmake  nest-gazebo-nomqtt-noros.cmake  nest-gazebo.cmake  vanilla-nomqtt-noros.cmake  vanilla.cache  vanilla.cmake
.ci/nrp-jsproto/: package.json
DockerFile/: Dockerfile  runTestOpensim.sh
NRP/: Dockerfile  export_nrp.sh
Not - NVIDIA/: env_config.sh  runDocker.sh
Opensim/: Dockerfile
With - NVIDIA/: env_config.sh  runDocker.sh
config_schemas/: simulation.json
config_schemas/engines/: engine_base.json  engine_docker.json  engines_edlut.json  engines_gazebo.json
dockerfiles/: base.Dockerfile  gazebo-nest.Dockerfile  gazebo.Dockerfile  nest.Dockerfile  nrp-core-env.Dockerfile  nrp-core.Dockerfile  nvidia_cuda.Dockerfile  opensim.Dockerfile  tvb.Dockerfile
docs/: main_page.dox
docs/engines/: engine_comm.dox  nrp_engines.dox  python_json_engine.dox
docs/example_engine/: CMakeLists.txt
docs/experiment_configuration/: engine_schema.dox  experiment_configuration.dox
docs/getting_started/: installation.dox  python_client.dox
docs/guides/: general_developer_guide.dox
docs/tutorials/: device_creation.dox
examples/AllSimRun_test/: client_os.py  client_py.py  server.py  servo.py  simulation_config.json  tf_1.py
examples/baseball_icub/: empty_nrp_icub.sdf  eye_sensor_transmit.py  mot_tf.py  move_target.py  simulation_config.json
examples/docker_opensim/: fromCtrl.py  fromSim.py  pyCtrl.py  simulation_config.json
examples/husky_braitenberg/: braitenberg_nest_server.py  cam_tf.py  mot_tf.py  simulation_config.json  simulation_config_data_transfer.json  simulation_config_docker.json  simulation_config_nest_server.json
examples/husky_braitenberg_json/: cam_pf.py  simulation_config.json  simulation_config_test.json
examples/new_gazebo_cpy_t/tPyLib/TG_plugin/tClient/src/: CMakeLists.txt  encode.cpp
nrp_docker_sim_engines/: CMakeLists.txt
nrp_docker_sim_engines/DockerSimulator/: README.md
nrp_docker_sim_engines/DockerSimulator/NRP/: Dockerfile  build.sh
nrp_docker_sim_engines/DockerSimulator/Opensim/: Dockerfile  export_opensim.sh
nrp_docker_sim_engines/DockerSimulator/Opensim/opensim/LocalModel/: serverLib.py
nrp_docker_sim_engines/DockerSimulator/Opensim/opensim/ShareModel/: serverLib.py
nrp_docker_sim_engines/DockerSimulator/Opensim/simulator/LocalModel/: OpensimLib.py  main.py
nrp_docker_sim_engines/nrp_docker_sim_engine/config/: docker_config.cpp  docker_config.h
nrp_docker_sim_engines/nrp_docker_sim_engine/nrp_client/: docker_sim_engine.cpp  docker_sim_engine.h  docker_sim_nrp_client.cpp  docker_sim_nrp_client.h
nrp_docker_sim_engines/nrp_docker_sim_engine/python/: ClientLib.py  EnvSet.py  NetConnector.py  __init__.py
nrp_edlut_grpc_engine/: CMakeLists.txt
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/boost_python_ros/: CMakeLists.txt  REAME_Eloy  package.xml
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/boost_python_ros/munged/: geometry_msgs_boost.py  nav_msgs_boost.py  sensor_msgs_boost.py  std_msgs_boost.py
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/boost_python_ros/scripts/: generate_msg_bindings.py
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/bstdmsg/: CMakeLists.txt  package.xml  readme_ber.md  setup.py
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/bstdmsg/scripts/: std_msgs_boost.py  std_msgs_cpp.py
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/bstdmsg/src/: std_msgs_Byte.cpp  std_msgs_ByteMultiArray.cpp  std_msgs_Float64.cpp  std_msgs_Header.cpp  std_msgs_Int16MultiArray.cpp  std_msgs_Int32.cpp  std_msgs_Int8.cpp  std_msgs_Int8MultiArray.cpp  std_msgs_MultiArrayLayout.cpp  std_msgs_Time.cpp  std_msgs_UInt16.cpp  std_msgs_UInt16MultiArray.cpp  std_msgs_UInt32.cpp  std_msgs_UInt32MultiArray.cpp  std_msgs_UInt64MultiArray.cpp  std_msgs_UInt8.cpp
nrp_engine_protocols/nrp_rosmsg_engine_protocol/catkin_ws/src/gazebo_msgs3/: CMakeLists.txt  package.xml
nrp_event_loop/: CMakeLists.txt
nrp_general_library/: CMakeLists.txt
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/: CMakeLists.txt
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/nrp_opensim_grpc_engine/config/: opensim_grpc_config.cpp  opensim_grpc_config.h
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/nrp_opensim_grpc_engine/devices/: grpc_opensim_physics_joint.h
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/nrp_opensim_grpc_engine/engine_server/: opensim_step_controller.cpp
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/nrp_opensim_grpc_engine/nrp_client/: opensim_engine_grpc_nrp_client.h
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/opensim_communication_controller/: nrp_opensim_communication_controller.cpp  nrp_opensim_communication_plugin.cpp  nrp_opensim_communication_plugin.h
nrp_opensim_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/opensim_world_plugin/: nrp_opensim_world_plugin.h
nrp_protobuf/: CMakeLists.txt
nrp_pysim_engines/: CMakeLists.txt
nrp_python_json_engine/: CMakeLists.txt
nrp_simulation/: CMakeLists.txt
nrp_simulation_json_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/: CMakeLists.txt
nrp_simulation_json_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/opensim_communication_controller/: nrp_opensim_communication_controller.h
nrp_simulation_json_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/opensim_joint_controller/: nrp_opensim_joint_controller.cpp  nrp_opensim_joint_controller.h
nrp_simulation_json_engines/Temp/nrp_opensim_grpc_engine/opensim_grpc_plugins/opensim_world_plugin/: nrp_opensim_world_plugin.cpp
(+547 files in other folders)
