<?xml version="1.0"?>
<package>
  <name>boost_python_ros</name>
  <version>1.0.0</version>
  <description>
    A minimal example package on how to use Boost::Python with catkin.
  </description>

  <maintainer email="felix@todo.todo">Felix Widmaier</maintainer>
  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/luator/ros-boost-python</url>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
